--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -12,8 +12,7 @@ jobs:
       - uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          
-          template: terminal
+          template: repository
           plugin_achievements: yes
           plugin_achievements_secrets: yes
           plugin_activity: yes
