--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -6,43 +6,11 @@ on:
 jobs:
   github-metrics:
     runs-on: ubuntu-latest
+    environment: 
+      name: production
     permissions:
       contents: write
     steps:
       - uses: lowlighter/metrics@latest
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          template: repository
-          plugin_achievements: yes
-          plugin_achievements_secrets: yes
-          plugin_activity: yes
-          plugin_calendar: yes
-          plugin_code: yes
-          plugin_discussions: yes
-          plugin_discussions_categories: yes
-          plugin_followup: yes
-          plugin_followup_archived: yes
-          plugin_gists: yes
-          plugin_habits: yes
-          plugin_habits_facts: yes
-          plugin_introduction: yes
-          plugin_introduction_title: yes
-          plugin_isocalendar: yes
-          plugin_languages: yes
-          plugin_lines: yes
-          plugin_notable: yes
-          plugin_people: yes
-          plugin_projects: yes
-          plugin_reactions: yes
-          plugin_repositories: yes
-          plugin_skyline: yes
-          plugin_sponsors: yes
-          plugin_sponsorships: yes
-          plugin_stargazers: yes
-          plugin_stargazers_charts: yes
-          plugin_starlists: yes
-          plugin_starlists_shuffle_repositories: yes
-          plugin_stars: yes
-          plugin_topics: yes
-          plugin_traffic: yes
-
+          token: ${{ secrets.METRICS_TOKEN }}
