--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -14,3 +14,4 @@ jobs:
       - uses: lowlighter/metrics@main
         with:
           token: ${{ secrets.METRICS_TOKEN }}
+          plugin_isocalendar: yes
