--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -21,3 +21,27 @@ jobs:
           plugin_lines: yes
           plugin_topics: yes
           plugin_stars: yes
+          plugin_licenses: yes
+          plugin_habits: yes
+          plugin_contributors: yes
+          plugin_followup: yes
+          plugin_reactions: yes
+          plugin_people: yes
+          plugin_sponsorships: yes
+          plugin_sponsors: yes
+          plugin_repositories: yes
+          plugin_discussions: yes
+          plugin_starlists: yes
+          plugin_calendar: yes
+          plugin_achievements: yes
+          plugin_notable: yes
+          plugin_activity: yes
+          plugin_traffic: yes
+          plugin_code: yes
+          plugin_gists: yes
+          plugin_projects: yes
+          plugin_introduction: yes
+          plugin_skyline: yes
+          plugin_pagespeed: yes
+          plugin_stackoverflow: yes
+          plugin_anilist: yes
