--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -32,7 +32,6 @@ jobs:
           plugin_repositories: yes
           plugin_discussions: yes
           plugin_starlists: yes
-          plugin_calendar: yes
           plugin_achievements: yes
           plugin_notable: yes
           plugin_activity: yes
@@ -42,3 +41,4 @@ jobs:
           plugin_projects: yes
           plugin_introduction: yes
           plugin_skyline: yes
+          plugin_pagespeed: yes
