--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -41,3 +41,9 @@ jobs:
           plugin_introduction: yes
           plugin_skyline: yes
           plugin_pagespeed: yes
+          plugin_stackoverflow: yes
+          plugin_anilist: yes
+          plugin_music: yes
+          plugin_wakatime: yes
+          plugin_leetcode: yes
+          plugin_steam: yes
