--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -42,6 +42,8 @@ jobs:
           plugin_stackoverflow: yes
           plugin_anilist: yes
           plugin_music: yes
+          plugin_music_provider: spotify
+          plugin_music_token: ${{ secrets.SPOTIFY_TOKENS }}
           plugin_wakatime: yes
           plugin_leetcode: yes
           plugin_steam: yes
