--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -40,6 +40,7 @@ jobs:
           plugin_pagespeed: yes
           plugin_stackoverflow: yes
           plugin_anilist: yes
+          plugin_anilist_user: rukDoe
           plugin_music: yes
           plugin_music_provider: spotify
           plugin_music_token: ${{ secrets.SPOTIFY_TOKENS }}
