--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -36,9 +36,9 @@ jobs:
           plugin_gists: yes
           plugin_projects: yes
           plugin_introduction: yes
-          plugin_skyline: yes
           plugin_pagespeed: yes
           plugin_stackoverflow: yes
+          plugin_stackoverflow_user: 10004647
           plugin_anilist: yes
           plugin_anilist_user: rukDoe
           plugin_music: yes
