--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -46,5 +46,5 @@ jobs:
           plugin_music_token: ${{ secrets.SPOTIFY_TOKENS }}
           plugin_wakatime: yes
           plugin_wakatime_token: ${{ secrets.WAKATIME_TOKEN }}
-          plugin_leetcode: yes
           plugin_steam: yes
+          plugin_steam_token: ${{ secrets.STEAM_TOKEN }}
