--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -48,3 +48,4 @@ jobs:
           plugin_wakatime_token: ${{ secrets.WAKATIME_TOKEN }}
           plugin_steam: yes
           plugin_steam_token: ${{ secrets.STEAM_TOKEN }}
+          plugin_steam_user: 76561199164371500
