--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -44,8 +44,8 @@ jobs:
           plugin_music: yes
           plugin_music_provider: spotify
           plugin_music_token: ${{ secrets.SPOTIFY_TOKENS }}
-          plugin_wakatime: yes
-          plugin_wakatime_token: ${{ secrets.WAKATIME_TOKEN }}
+          plugin_rss: yes
+          plugin_rss_source: https://doany.io/feed.xml
           plugin_steam: yes
           plugin_steam_token: ${{ secrets.STEAM_TOKEN }}
           plugin_steam_user: 76561199164371500
