--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -18,10 +18,10 @@ jobs:
           plugin_isocalendar: yes
           plugin_languages: yes
           plugin_stargazers: yes
-          plugin_lines: yes
           plugin_topics: yes
           plugin_stars: yes
           plugin_licenses: yes
+          plugin_licenses_ratio: yes
           plugin_habits: yes
           plugin_contributors: yes
           plugin_reactions: yes
@@ -38,7 +38,7 @@ jobs:
           plugin_introduction: yes
           plugin_pagespeed: yes
           plugin_stackoverflow: yes
-          plugin_stackoverflow_user: 10004647
+          plugin_stackoverflow_user: "10004647"
           plugin_anilist: yes
           plugin_anilist_user: rukDoe
           plugin_music: yes
