--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -15,6 +15,7 @@ jobs:
         with:
           token: ${{ secrets.METRICS_TOKEN }}
           config_display: large
+          base: activity, community, repositories, metadata
           plugin_isocalendar: yes
           plugin_languages: yes
           plugin_stargazers: yes
@@ -28,11 +29,12 @@ jobs:
           plugin_discussions: yes
           plugin_achievements: yes
           plugin_notable: yes
+          plugin_notable_from: all
+          plugin_notable_repositories: yes
           plugin_traffic: yes
           plugin_code: yes
           plugin_gists: yes
           plugin_projects: yes
-          plugin_introduction: yes
           plugin_pagespeed: yes
           plugin_stackoverflow: yes
           plugin_stackoverflow_user: 10004647
