--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -16,12 +16,9 @@ jobs:
           token: ${{ secrets.METRICS_TOKEN }}
           config_display: large
           config_timezone: Asia/Tokyo
-          config_order: languages, stargazers, topics, stars, habits, reactions, sponsorships, achievements, code, projects, pagespeed, rss, stackoverflow, anilist, music
+          config_order: stargazers, habits, reactions, sponsorships, achievements, code, projects, pagespeed, rss, stackoverflow, anilist
           base: metadata
-          plugin_languages: yes
           plugin_stargazers: yes
-          plugin_topics: yes
-          plugin_stars: yes
           plugin_habits: yes
           plugin_reactions: yes
           plugin_sponsorships: yes
@@ -34,10 +31,4 @@ jobs:
           plugin_anilist: yes
           plugin_anilist_user: rukDoe
           plugin_music: yes
-          plugin_music_provider: spotify
-          plugin_music_token: ${{ secrets.SPOTIFY_TOKENS }}
-          plugin_rss: yes
-          plugin_rss_source: https://doany.io/feed.xml
-          plugin_steam: yes
-          plugin_steam_token: ${{ secrets.STEAM_TOKEN }}
-          plugin_steam_user: "76561199164371500"
+          plugin_music_provider: spotifygd.xml
