--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -31,4 +31,5 @@ jobs:
           plugin_anilist: yes
           plugin_anilist_user: rukDoe
           plugin_music: yes
-          plugin_music_provider: spotifygd.xml
+          plugin_music_provider: spotify
+          plugin_music_token: ${{ secrets.SPOTIFY_TOKENS }}
