--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -16,12 +16,10 @@ jobs:
           token: ${{ secrets.METRICS_TOKEN }}
           config_display: large
           config_timezone: Asia/Tokyo
-          config_order: stargazers, habits, reactions, sponsorships, achievements, code, projects, pagespeed, rss, stackoverflow, anilist
+          config_order: habits, reactions, achievements, code, projects, pagespeed, rss, stackoverflow, anilist
           base: metadata
-          plugin_stargazers: yes
           plugin_habits: yes
           plugin_reactions: yes
-          plugin_sponsorships: yes
           plugin_achievements: yes
           plugin_code: yes
           plugin_projects: yes
