--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -16,7 +16,7 @@ jobs:
           token: ${{ secrets.METRICS_TOKEN }}
           config_display: large
           config_timezone: Asia/Tokyo
-          config_order: habits, reactions, achievements, code, pagespeed, rss, stackoverflow, anilist
+          config_order: habits, reactions, achievements, code, pagespeed, rss, stackoverflow
           base: metadata
           plugin_habits: yes
           plugin_reactions: yes
@@ -25,8 +25,6 @@ jobs:
           plugin_pagespeed: yes
           plugin_stackoverflow: yes
           plugin_stackoverflow_user: 10004647
-          plugin_anilist: yes
-          plugin_anilist_user: rukDoe
           plugin_music: yes
           plugin_music_provider: spotify
           plugin_music_token: ${{ secrets.SPOTIFY_TOKENS }}
