--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -16,7 +16,7 @@ jobs:
           token: ${{ secrets.METRICS_TOKEN }}
           config_display: large
           config_timezone: Asia/Tokyo
-          config_order: habits, reactions, achievements, code, pagespeed, rss, stackoverflow
+          config_order: habits, reactions, achievements, code, rss
           base: metadata
           plugin_habits: yes
           plugin_habits_from: 1000
@@ -34,3 +34,4 @@ jobs:
           plugin_music: yes
           plugin_music_provider: spotify
           plugin_music_token: ${{ secrets.SPOTIFY_TOKENS }}
+          plugin_music_mode: top
