--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -33,6 +33,5 @@ jobs:
           plugin_music: yes
           plugin_music_provider: spotify
           plugin_music_token: ${{ secrets.SPOTIFY_TOKENS }}
+          plugin_music_user: 31gngbbxftz6qxaorj2u4ycrezdq
           plugin_music_mode: top
-          plugin_music_time_range: short
-          plugin_music_top_type: tracks
