--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -33,5 +33,4 @@ jobs:
           plugin_music: yes
           plugin_music_provider: spotify
           plugin_music_token: ${{ secrets.SPOTIFY_TOKENS }}
-          plugin_music_user: 31gngbbxftz6qxaorj2u4ycrezdq
-          plugin_music_mode: top
+          plugin_music_mode: recent
