--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -16,7 +16,7 @@ jobs:
           token: ${{ secrets.METRICS_TOKEN }}
           config_display: large
           config_timezone: Asia/Tokyo
-          config_order: habits, reactions, achievements, code, rss
+          config_order: reactions, achievements, code, habits, rss
           base: metadata
           plugin_habits: yes
           plugin_habits_from: 1000
@@ -33,4 +33,3 @@ jobs:
           plugin_music: yes
           plugin_music_provider: spotify
           plugin_music_token: ${{ secrets.SPOTIFY_TOKENS }}
-          plugin_music_mode: recent
